--- a/rs/templates/login_helpers/registration.html
+++ b/rs/templates/login_helpers/registration.html
@@ -129,17 +129,22 @@
 
                     } else {
                         var readable_object = JSON.stringify(post_response);
-                        report_ajax_error(textStatus, errorThrown, "handle_user_registration_form - unknown json response: " + readable_object);
+                        var error_html = "handle_user_registration_form - unknown json response: " + readable_object;
+                        report_ajax_error("NA", "NA",  error_html);
+                        show_fields_errors("login_fields", [], error_html);
                     }
                 },
                 error: function(jqXHR, textStatus, errorThrown) {
                     $('#id-submit-signup-button').removeAttr('disabled'); // enable submit button
                     
+                    var error_html;
                     if (jqXHR.responseText != undefined) {
-                        report_ajax_error(textStatus, errorThrown, jqXHR.responseText);
+                        error_html = jqXHR.responseText;
                     } else {
-                        report_ajax_error(textStatus, errorThrown, "handle_user_registration_form - unknown error");
+                        error_html = "handle_user_registration_form - unknown error";
                     }
+                    show_fields_errors("login_fields", [], error_html);
+                    report_ajax_error(textStatus, errorThrown, error_html);                       
                 }
             });
             // prevent normal page navigation upon form submission - this is the same as calling
