Re-wrote the login functionality to pull the userobject out of the database, and then compare login fields values to the userobject, versus the previous method of querying the database with all of the field values included in the query.

--- a/rs/templates/landing_page.html
+++ b/rs/templates/landing_page.html
@@ -88,7 +88,9 @@
         for (key in errors_dict) {
             var input_field_id_selector = "#id-" + fields_type + "-" + key;
             $(input_field_id_selector).addClass("cl-highlight_border");
-            error_html += '<li class="cl-indent">'+ errors_dict[key];
+            if (errors_dict[key]) {
+                error_html += '<li class="cl-indent">'+ errors_dict[key];
+            }
         }
         error_html += '</ul>';
         error_html += extra_html;
