--- a/rs/templates/landing_page.html
+++ b/rs/templates/landing_page.html
@@ -122,7 +122,7 @@
     <div class="cl-clear"></div>
     <div class="grid_12">
 
-        {% include "login_helpers/already_registered_login.html" %}
+        {% include "login_helpers/login.html" %}
     </div>
         
     <div class="cl-clear"></div>
