Work in progress - interm checkin. Making major updates to login and registration process so tht they will be fully ajax - and so that even if the user clicks on a verification link in an email, the internal code that deals with the link will be the same as if they had continued the registration process directly from the website.

--- a/rs/templates/landing_page.html
+++ b/rs/templates/landing_page.html
@@ -67,6 +67,8 @@
 
 
     function clear_fields_errors(fields_type, errors_dict) {
+        // fields_type is either signup_fields or login_fields
+
         for (key in errors_dict) {
             var input_field_id_selector = "#id-"+ fields_type + "-" + key;
             $(input_field_id_selector).removeClass("cl-highlight_border");
@@ -82,6 +84,7 @@
     }
 
     function show_fields_errors(fields_type, errors_dict, extra_html) {
+        // fields_type is either signup_fields or login_fields
 
         var error_html = '<ul>';
         // loop over the objects in the errors_dict        
@@ -149,7 +152,8 @@
 
             {% if not maintenance_shutdown_warning %}
 
-                {% include "login_helpers/registration.html" %}
+            {% include "login_helpers/registration.html" %}
+            {% include "login_helpers/verification.html" %}
 
             {% endif %}
 
